Validate executor local directories and block ids in the external shuffle service follow-up